Fixed avatar stretching

--- a/static-html/assets/css/style.css
+++ b/static-html/assets/css/style.css
@@ -1252,3 +1252,7 @@ section {
   width: 55%;
   min-width: 280px;
 }
+
+.avatar {
+  min-width: 17px;
+}
